--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
 .App {
+	border: 4px solid black;
+	padding: 1rem;
+
+	margin-top: 2rem;
 	.form__container {
 		border: 2px solid orangered;
 		width: 20rem;
