--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,9 @@
 		gap: 1rem;
 		padding: 1rem;
 	}
+
+	.page__current {
+		background-color: rgb(247, 201, 118);
+		border: 3px solid lightblue;
+	}
 }
